# django_port_12_sandbox

./: .gitignore  Makefile  config.status  less  pyproject.toml
g/: pyproject.toml  urls.py
g/a/: utils.py  views.py
g/a/templates/: index.html  t.html
g/b/: utils.py  views.py
g/b/templates/: index_howtonamesame.html
g/g/: asgi.py  settings.py  urls.py  wsgi.py
